--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,43 @@
 
-
 <nav class="sticky">
   <div class="nav-content">
     <div class="logo">
       <a href="/"></a>
+      
     </div>
     <ul class="nav-links">
       <li><a href="/">ホーム</a></li>
       <li><a href="/kodawari">こだわり</a></li>
       <li><a href="/productlist">商品</a></li>
       <li><a href="/">English</a></li>
+      
 
     </ul>
   </div>
 </nav>
 
 <style>
+      .c-singlePager {
+          position: relative;
+          font-size: 20px;
+          font-family: 'Shippori Mincho', sans-serif;
+          margin: 50px 40px 80px;
+          padding: 0 0 10px;
+      }
+      
+      .c-singlePager_arrow-prev {
+          position: absolute;
+          top: 0;
+          left: 0;
+      }
+      
+      .c-singlePager_arrow-next {
+          position: absolute;
+          top: 0;
+          right: 0;
+      }
+
+
 
 
 nav {
