--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -1,3 +1,419 @@
+<div class="wrapper">     
+    <div class="newsTop_wrapper">
+      <div class="newsTop">
+        <div class="newsTop_info">
+          <div class="newsTop_category">
+             Pattern Order      </div>
+          <time class="newsTop_date">
+                </time>
+        </div>
+        <h1 class="newsTop_title">
+          パターンオーダー   </h1>
+        <div class="newsTop_share">
+          <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
+            height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
+          </div>
+     
+        </div>
+      </div>
+      <div class="newsVisual">
+        <img src="/samale-min.webp">
+      </div>
+    </div>
+    
+    
+    <div class="newsEditor">
+        <h1 class="ttl_1"><span class="line">世界でひとつの革製品は、大人へのパスポート。</span></h1>
+      <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。GANZO FLAGSHIP SHOP パターンオーダーは、日本文化を知り尽くした職人が、あなたの思い描いた革製品を匠の手によって実現させる、究極のこだわりのシステム。世界でひとつのジャパンメイドを「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
+    <p>&nbsp;</p>
+
+    <p><img loading="lazy" src="/sampleleather-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+    <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
+    <p>&nbsp;</p>
+    <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+    <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
+      
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
+      height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
+      &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
+      height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
+      &ensp;<a href="/">カラーオーダーはこちら</a></p>
+    </div>
+  </div>
+
+
+<style>
+
+
+.ttl_1 {
+    font-family: 'Shippori Mincho', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.75;
+    letter-spacing: .1em;
+    margin-bottom: 80px;
+    font-feature-settings: "palt";
+    text-align: center;
+}
+
+.ttl_1 .line {
+    border-bottom: 1px solid;
+    padding-bottom: 7px;
+}
+
+
+.c-singlePager {
+position: relative;
+font-size: 20px;
+font-family: 'Shippori Mincho', sans-serif;
+margin: 50px 40px 80px;
+padding: 0 0 10px;
+}
+
+.c-singlePager_arrow-prev {
+position: absolute;
+top: 0;
+left: 0;
+}
+
+.c-singlePager_arrow-next {
+position: absolute;
+top: 0;
+right: 0;
+}
+
+
+.sp {
+display: none !important;
+}
+
+@media screen and (max-width:767px) {
+.pc {
+display: none !important;
+}
+.sp {
+display: block !important;
+}
+}
 
 
 
+
+.wrapper{
+margin-bottom: 120px;
+}
+
+.newsTop_wrapper {
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-orient: horizontal;
+-webkit-box-direction: reverse;
+-ms-flex-direction: row-reverse;
+flex-direction: row-reverse;
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+padding-top: 120px;
+margin: 0px 20px;
+
+}
+@media print, screen and (max-width: 767px) {
+.newsTop_wrapper {
+display: block;
+margin: 0px 20px;
+}
+}
+
+.newsTop {
+width: 50%;
+padding: 0 80px;
+}
+@media print, screen and (max-width: 767px) {
+.newsTop {
+width: auto;
+padding: 0;
+}
+}
+
+.newsTop_info {
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+font-family: 'Shippori Mincho', sans-serif;
+font-size: 14px;
+}
+@media print, screen and (max-width: 767px) {
+.newsTop_info {
+font-size: 12px;
+}
+}
+
+.newsTop_category {
+margin: 0 20px 0 0;
+font-size: 1rem;
+font-family: 'Shippori Mincho', sans-serif;
+
+
+}
+
+.newsTop_date {
+color: #838383;
+}
+
+.newsTop_title {
+font-size: 24px;
+line-height: 1.5;
+margin: 10px 0 0;
+}
+@media print, screen and (min-width: 768px) and (max-width: 1024px) {
+.newsTop_title {
+font-size: 1.6rem;
+}
+}
+@media print, screen and (max-width: 767px) {
+.newsTop_title {
+font-size: 1.6rem;
+}
+}
+
+.newsTop_share {
+display: -webkit-box;
+display: -ms-flexbox;
+display: flex;
+-webkit-box-align: center;
+-ms-flex-align: center;
+align-items: center;
+margin: 60px 0 0;
+}
+
+.newsTop_shareTitle {
+font-family: 'Shippori Mincho', sans-serif;
+margin: 0 20px 0 0;
+}
+
+
+
+.newsTop_shareList_node {
+margin: 0 5px;
+}
+
+.newsVisual {
+width: 50%;
+}
+.newsVisual img {
+width: 100%;
+}
+
+
+.newsEditor {
+width: 720px;
+margin: 120px auto 0;
+}
+.newsEditor p {
+line-height: 2;
+font-size: 0.92rem;
+font-family: 'Shippori Mincho', sans-serif;
+
+}
+.newsEditor a {
+color: #003EA2;
+text-decoration: underline;
+}
+.newsEditor hr {
+display: block;
+border-bottom: solid 1px #010101;
+}
+.newsEditor iframe {
+max-width: 100%;
+}
+.newsEditor img {
+max-width: 100%;
+height: auto;
+}
+.newsEditor img.aligncenter {
+display: block;
+margin: 0 auto;
+}
+.newsEditor > p:not([class]) {
+margin-bottom: 20px;
+}
+.newsEditor .googleMap {
+padding-bottom: 54.32%;
+}
+.newsEditor .googleMap iframe {
+width: 100%;
+}
+.newsEditor .youtube {
+position: relative;
+width: 100%;
+}
+.newsEditor .youtube iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+
+
+
+@media print, screen and (max-width: 767px) {
+.newsTop_share {
+margin: 20px 0 0;
+}
+}
+
+
+@media print, screen and (max-width: 767px) {
+.newsTop_shareTitle {
+margin: 0 10px 0 0;
+}
+}
+
+
+@media print, screen and (max-width: 767px) {
+.newsTop_shareList_node svg {
+width: 23px;
+height: 18px;
+}
+}
+
+
+@media print, screen and (max-width: 767px) {
+.newsVisual {
+width: auto;
+margin: 40px 0 0;
+}
+}
+
+@media print, screen and (max-width: 767px) {
+.newsEditor {
+width: auto;
+margin: 60px 20px 0;
+font-size: 0.95rem;
+
+}
+
+.newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
+font-size: 0.95rem;
+
+font-family: "Shippori Mincho B1",serif;
+line-height: 2.3076923077;
+letter-spacing: .05em;
+
+}
+}
+
+
+
+
+p{
+font-family: "Shippori Mincho B1",serif;
+line-height: 2.3076923077;
+margin-top: 3.125rem;
+transition: .6s 1s;
+font-size: 0.9rem;
+letter-spacing: .05em;
+}
+
+
+
+
+.sns:hover{
+text-decoration:underline;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+* {
+padding: 0;
+margin: 0;
+}
+
+
+
+
+
+
+*,:before,:after {
+box-sizing: border-box;
+border-style: solid;
+border-width: 0
+}
+html {
+line-height: 1.15;
+-webkit-text-size-adjust: 100%;
+-webkit-tap-highlight-color: transparent
+}
+
+body {
+margin: 0;
+color: #333;
+-moz-osx-font-smoothing: grayscale;
+-webkit-font-smoothing: antialiased;
+text-rendering: optimizeLegibility;
+font-family: 'Shippori Mincho', sans-serif;
+
+}
+
+
+main {
+display: block
+}
+
+p,table,blockquote,address,pre,iframe,form,figure,dl {
+margin: 0
+}
+
+h1,h2,h3,h4,h5,h6 {
+font-size: inherit;
+font-weight: inherit;
+margin: 0
+}
+
+
+
+
+hr {
+box-sizing: content-box;
+height: 0;
+overflow: visible;
+border-top-width: 1px;
+margin: 0;
+clear: both;
+color: inherit
+}
+
+
+a {
+background-color: transparent;
+text-decoration: none;
+color: inherit
+}
+
+
+
+
+
+
+</style>
