--- a/src/components/Keycase.astro
+++ b/src/components/Keycase.astro
@@ -20,19 +20,19 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/fleeee-min.webp">
+                    <img src="/keycasebodyy.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。【 サイズ(cm) H12 W7 】</p>
+                  <p></p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/sampleleather-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
+                <p><img loading="lazy" src="/keycasebody.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。【 サイズ(cm) H12 W7 】<br><br>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
-                <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
@@ -44,8 +44,19 @@
                 </div>
               </div>
   
+              <div class="c-singlePager">
+             
+                  <a href="/threewallet" class="c-singlePager_arrow-next">
+                <span>Next</span>
+              </a>
+            </div>
+
   
       <style>
+
+
+
+
   .c-singlePager {
       position: relative;
       font-size: 20px;
