--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -26,21 +26,33 @@
               
               
               <div class="newsEditor">
-                <p>Pirca Mabuiでは、主に2種類の表面のスクラッチ加工が特徴のショルダー革を取り扱っています。</p>
+                <h1 class="ttl_1"><span class="line">スクラッチ加工が特徴のショルダー革</span></h1>
+            
               <p>&nbsp;</p>
               <p><img src="/longwallet1-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
               <p>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(&thinsp;ブラッシングと乾拭きのみで十分です&thinsp;)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
               </p>
               <p>&nbsp;</p>
 
-              
-              <p><img loading="lazy" src="/sampleleather-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc">(&thinsp;仕入れから製作をするため、すべての色から選択ができます&thinsp;）</p>
+              <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
+              <p>写真左&nbsp;:&nbsp;約1年半ほど使用した革色 グレー<br class="pc"><br class="sp">写真右&nbsp;:&nbsp;新品のキーケース&nbsp;グレー<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+
+                <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
+
               <p>&nbsp;</p>
+
+              <p><img src="/samplekawa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
+              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc"><br class="sp">特徴的なスクラッチ模様はそのままに、ワックスによる滑らかな触り心地が特徴です。
+              </p>
+              
+              <p>&nbsp;</p>
+                
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
+              <p>&thinsp;ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">こちらの革は、仕入れから製作をするため、すべての色から選択ができます&thinsp;<br class="sp"><br class="pc"><br class="sp"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                 height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
                 PRODUCT・<a href="/productlist">商品リストをみる</a></p>
+            
+           
             
               </div>
             </div>
@@ -48,6 +60,22 @@
 
 
     <style>
+
+.ttl_1 {
+    font-family: 'Shippori Mincho', sans-serif;
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.75;
+    letter-spacing: .1em;
+    margin-top: 80px;
+    font-feature-settings: "palt";
+    text-align: center;
+}
+
+.ttl_1 .line {
+    border-bottom: 1px solid;
+    padding-bottom: 7px;
+}
 .c-singlePager {
     position: relative;
     font-size: 20px;
@@ -105,6 +133,11 @@
 
 }
 @media print, screen and (max-width: 767px) {
+  .ttl_1 {
+
+    font-size: 1rem;
+  }
+
   .newsTop_wrapper {
     display: block;
     margin: 0px 20px;
