--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -30,12 +30,12 @@
             
               <p>&nbsp;</p>
               <p><img src="/longwallet1-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。他の革に比べて傷が目立ちにくく、メンテナンス(&thinsp;ブラッシングと乾拭きのみで十分です&thinsp;)の手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
+              <p>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。<br class="sp"><br class="sp">他の革に比べて傷が目立ちにくく、ブラッシングと乾拭きのみで手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。<br class="sp"><br class="sp">オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
               </p>
               <p>&nbsp;</p>
 
               <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>写真左&nbsp;:&nbsp;約1年半ほど使用した革色 グレー<br class="pc"><br class="sp">写真右&nbsp;:&nbsp;新品のキーケース&nbsp;グレー<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+              <p>写真左&nbsp;:&nbsp;約1年半ほど使用した革色 グレー<br class="pc"><br class="sp">写真右&nbsp;:&nbsp;新品のキーケース&nbsp;グレー<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
                 <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
 
@@ -135,7 +135,7 @@
 @media print, screen and (max-width: 767px) {
   .ttl_1 {
 
-    font-size: 1rem;
+    font-size: 1.11rem;
   }
 
   .newsTop_wrapper {
