--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -26,7 +26,7 @@
               
               
               <div class="newsEditor">
-                <h1 class="ttl_1"><span class="line">スクラッチ加工が特徴のショルダー革</span></h1>
+                <h1 class="ttl_1"><span class="line">スクラッチ加工が特徴の革</span></h1>
             
               <p>&nbsp;</p>
               <p><img src="/longwallet1-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
