--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -36,7 +36,7 @@
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
-        <p class="introduction__text astro-HR23OLMI">当店では受注生産にてオーダーを承っており、断裁から縫製、仕上げに至るまで、全ての工程を一人の職人が行なっています。<br class="pc"><br class="sp"><br class="sp">製品には希少価値の高い最高級イタリアンレザーをふんだんに使用されており、経年変化により持ち主の色に育ち、歴史が刻まれていきます。
+        <p class="introduction__text astro-HR23OLMI">当店では受注生産にてオーダーを承っており、断裁から総手縫い、仕上げに至るまで、全ての工程を一人の職人が行なっています。<br class="pc"><br class="sp"><br class="sp">製品には希少価値の高い最高級イタリアンレザーをふんだんに使用されており、経年変化により持ち主の色に育ち、歴史が刻まれていきます。
 <br class="pc"><br class="sp"><br class="sp">革のパーツを色別で選択ができるため、唯一無二の「とくべつな色」に仕上がります。シンプルなデザインに、時間の概念をブレンドした革製品をお届けします。
   
   </p>
@@ -73,10 +73,10 @@
   <li class="c-bannerList_node">
     <a href="/kodawari">
       <div class="c-bannerList_img">
-        <img src="/sampleleather-min.webp" alt="当店の画像について">
+        <img src="/leatherhosii-min.jpg" alt="当店の画像について" >
       </div>
-      <h3 class="c-bannerList_title">ABOUT LEATHER</h3>
-      <p class="c-bannerList_text">主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。</p>
+      <h3 class="c-bannerList_title">ABOUT SHOP</h3>
+      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span>  </center></p>
     </a>
   </li>
 </ul>
