--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -73,10 +73,10 @@
   <li class="c-bannerList_node">
     <a href="/kodawari">
       <div class="c-bannerList_img">
-        <img src="/leatherhosii-min.jpg" alt="当店の画像について" >
+        <img src="/leatherhosii-min.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT SHOP</h3>
-      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span>  </center></p>
+      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span> </center></p>
     </a>
   </li>
 </ul>
