--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1310,19 +1310,23 @@ img{
 }
 
 
-    nav {
-      position: -webkit-sticky; /* Safari */
+nav {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
-      background-color: rgba(255, 255, 255, 0.8);
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      z-index: 1000; /* Ensure it's above other elements */
+    z-index: 1; /* z-indexで最前面に持ってくる */
 
-      font-family: "Shippori Mincho",sans-serif;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
 
-    }
+    font-family: "Shippori Mincho",sans-serif;
 
+
+  overflow: hidden;
+  position: fixed;
+
+
+  }
 
 
   
