--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -16,7 +16,7 @@
 
 
 
-    <nav id="down" class="sticky">
+    <nav class="sticky">
       <div class="nav-content">
         <div class="logo">
           <a href="/"></a>
@@ -32,7 +32,7 @@
     
   
   
-<section  class="introduction astro-HR23OLMI">
+<section id="down"  class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
