--- a/src/components/Keycase.astro
+++ b/src/components/Keycase.astro
@@ -33,14 +33,21 @@
                 <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
+                <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span><br class="sp"><br class="sp"><br class="pc"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
+                  
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="/">パターンオーダーはこちら</a></p>
+                  &ensp;<a href="/" class="animate-link" >パターンオーダーはこちら</a>
+                
+             
+                </p>
+
+
+            
                 </div>
               </div>
   
@@ -53,6 +60,32 @@
 
   
       <style>
+
+
+
+.animate-link {
+  text-decoration: none; /* デフォルトの下線を非表示にする */
+  color: #003EA2; /* 文字色 */
+  background-image: linear-gradient(90deg, #003EA2, #003EA2); /* 線の色 */
+  background-repeat: no-repeat;
+  background-position: left bottom; /* 線の起点を左・下に設定 */
+  background-size: 0 1px; /* 線の横幅を0、縦幅を1pxに */
+  transition: background-size 0.6s; /* 線を伸ばすアニメーション実行時間を指定 */
+}
+
+.animate-link:hover {
+  background-size: 100% 1px; /* 線の横幅を100%にする */
+}
+
+.stripe-marker {
+  background-image: repeating-linear-gradient(-45deg,
+    #eee 0, #eee 2px,
+    transparent 2px, transparent 4px
+  );
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100% 0.5em;
+}
 
 
 
@@ -213,7 +246,6 @@
   }
   .newsEditor a {
     color: #003EA2;
-    text-decoration: underline;
   }
   .newsEditor hr {
     display: block;
