--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -42,7 +42,7 @@
               <p>&nbsp;</p>
 
               <p><img src="/samplekawa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc"><br class="sp">特徴的なスクラッチ模様はそのままに、ワックスによる滑らかな触り心地が特徴です。<br class="sp"><br class="pc"><br class="pc"><br class="sp">※こちらの革は、外装のみ、または一部商品には適応外となります。
+              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc"><br class="sp">特徴的なスクラッチ模様はそのままに、ワックスによる滑らかな触り心地が特徴です。<br class="sp"><br class="pc"><br class="pc"><br class="sp"><span class="stripe-marker">※こちらの革は、外装のみ、または一部商品には適応外となります。</span>
               </p>
               
               <p>&nbsp;</p>
@@ -50,7 +50,7 @@
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
               <p>&thinsp;ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">こちらの革は、仕入れから製作をするため、すべての色から選択ができます。&thinsp;<br class="sp"><br class="pc"><br class="sp"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                 height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                PRODUCT・<a href="/productlist">商品リストをみる</a></p>
+                PRODUCT・<a href="/productlist" class="animate-link">商品リストをみる</a></p>
             
            
             
@@ -60,6 +60,30 @@
 
 
     <style>
+
+.stripe-marker {
+  background-image: repeating-linear-gradient(-45deg,
+    #eee 0, #eee 2px,
+    transparent 2px, transparent 4px
+  );
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100% 0.5em;
+}
+
+.animate-link {
+  text-decoration: none; /* デフォルトの下線を非表示にする */
+  color: #003EA2; /* 文字色 */
+  background-image: linear-gradient(90deg, #003EA2, #003EA2); /* 線の色 */
+  background-repeat: no-repeat;
+  background-position: left bottom; /* 線の起点を左・下に設定 */
+  background-size: 0 1px; /* 線の横幅を0、縦幅を1pxに */
+  transition: background-size 0.6s; /* 線を伸ばすアニメーション実行時間を指定 */
+}
+
+.animate-link:hover {
+  background-size: 100% 1px; /* 線の横幅を100%にする */
+}
 
 .ttl_1 {
     font-family: 'Shippori Mincho', sans-serif;
@@ -237,7 +261,6 @@
 }
 .newsEditor a {
   color: #003EA2;
-  text-decoration: underline;
 }
 .newsEditor hr {
   display: block;
