--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -23,27 +23,195 @@
     
     
     <div class="newsEditor">
-        <h1 class="ttl_1"><span class="line">世界でひとつの革製品は、大人へのパスポート。</span></h1>
-      <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。GANZO FLAGSHIP SHOP パターンオーダーは、日本文化を知り尽くした職人が、あなたの思い描いた革製品を匠の手によって実現させる、究極のこだわりのシステム。世界でひとつのジャパンメイドを「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
+        <h1 class="ttl_1"><span class="line">個性を紡ぐ、あなただけのレザーアート</span></h1>
+      <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。<br class="sp"><br class="sp">当店では素材の中からお好みの革の種類や色を選択していただき、革小物を製作するパターンオーダーを承っております。<br class="sp"><br class="sp">あなただけのこだわり詰め込んだ、「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
     <p>&nbsp;</p>
 
-    <p><img loading="lazy" src="/sampleleather-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-    <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
-    <p>&nbsp;</p>
-    <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-    <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。<br class="sp"><br class="sp"><br class="pc"><br class="pc">
-      
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
-      height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-      &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
-      height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-      &ensp;<a href="/">カラーオーダーはこちら</a></p>
+ 
+
+
+  
+    <div class="bp_inner">
+      <h3 class="ttl_b">ご注文の流れ<br><span>HOW TO ORDER</span></h3>
+      <div class="table notbor">
+        <dl>
+        <dt>STEP - 1 アイテム</dt>
+        <dd>お客様にはベースとなる革小物を商品ページから選択していただきます。<br class="sp">ご希望の素材によっては、パターンオーダーに対応していないモデルもございます。<br class="sp"><br class="pc">また、ポケットを増やす等の形のカスタマイズは出来ません。</dd>
+        </dl>
+        <dl>
+        <dt>STEP - 2 皮革</dt>
+        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【 スクラッチ 】&nbsp;８色<br class="pc"><br class="sp">【 ホワイトワックス 】&nbsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span></span>
+        </dd>
+        </dl>
+        <dl>
+        <dt>STEP - 3 糸色</dt>
+        <dd>11色の中からお好みの糸色を1色選択していただきます。<br class="pc"><br class="sp">ステッチは上糸・下糸ともに同色となります。<br class="pc"><br class="sp">【 Fil Au Chinois 】&nbsp;4色<br class="pc"><br class="sp">【 Since 】&nbsp;7色</dd>
+        </dl>
+        <dl>
+        <dt>STEP - 4 金具</dt>
+        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc">【 ホック 】&nbsp;ゴールド、アンティーク、シルバー<br class="pc">【 キーフック 】&nbsp;ゴールド、アンティーク、シルバー<br class="pc">【 リング 】&nbsp;ゴールド、シルバー<br class="pc">【 ファスナー 】&nbsp;ゴールド、アンティーク、シルバー </dd>
+        </dl>
+
+        <dl>
+          <dt>STEP - 6 ロゴ、刻印</dt>
+          <dd>	ロゴの有無、、刻印する文字をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※大小文字含め６文字まで</span></dd>
+          </dl>
+        <dl>
+        <dt>お引き渡し・ご配達</dt>
+        <dd>仕入れにかかる日数を加え、発送まで４週間程度お時間を頂いております。<br class="pc"><br class="sp"><a href="https://pircamabui.com/leagal/" class="animate-link">詳細はこちらから </a></dd>
+        </dl>
+      </div><!-- /.table -->
     </div>
-  </div>
+
+
+
+
+
 
 
 <style>
+
+.animate-link {
+  text-decoration: none; /* デフォルトの下線を非表示にする */
+  color: #003EA2; /* 文字色 */
+  background-image: linear-gradient(90deg, #003EA2, #003EA2); /* 線の色 */
+  background-repeat: no-repeat;
+  background-position: left bottom; /* 線の起点を左・下に設定 */
+  background-size: 0 1px; /* 線の横幅を0、縦幅を1pxに */
+  transition: background-size 0.6s; /* 線を伸ばすアニメーション実行時間を指定 */
+}
+
+.animate-link:hover {
+  background-size: 100% 1px; /* 線の横幅を100%にする */
+}
+
+
+.stripe-marker {
+  background-image: repeating-linear-gradient(-45deg,
+    #eee 0, #eee 2px,
+    transparent 2px, transparent 4px
+  );
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100% 0.5em;
+}
+
+.bp_inner[data-astro-cid-pj7xj6mf] {
+    width: auto;
+    margin: 0 auto;
+    margin-bottom: 51px;
+}
+.table dl {
+    border-bottom: 1px solid #ececec;
+}
+
+
+.ttl_b {
+  font-family: "Shippori Mincho B1", serif;
+    line-height: 2.3076923077;
+    margin-top: 3.125rem;
+    transition: .6s 1s;
+    font-size: 24px;
+    letter-spacing: .05em;
+    text-align: center;
+}
+
+.ttl_b span {
+  font-size: 0.8rem;
+    font-family: "Shippori Mincho", sans-serif;
+    display: block;
+}
+
+
+
+.table dl dt {
+    vertical-align: top;
+    width: 386px;
+    font-size: 16px;
+    line-height: 1.6875;
+    letter-spacing: 0.1em;
+    padding-right: 10px;
+}
+
+.table dl {
+    display: table;
+    width: 100%;
+    padding: 35.6px 0
+}
+
+.table dl:first-child {
+    padding-top: 41px
+}
+
+
+.table dl dt,.table dl dd {
+    display: table-cell;
+    vertical-align: middle
+}
+
+
+
+.table dl dt {
+    vertical-align: top;
+    width: 386px;
+    font-family: "Shippori Mincho B1", serif;
+    line-height: 2.3076923077;
+    margin-top: 3.125rem;
+    transition: .6s 1s;
+    font-size: 1rem;
+    letter-spacing: .05em;
+}
+
+
+
+.table dl dd {
+    width: 555px;
+    font-family: "Shippori Mincho B1", serif;
+    line-height: 2.3076923077;
+    margin-top: 3.125rem;
+    transition: .6s 1s;
+    font-size: 0.92rem;
+    letter-spacing: .05em;
+}
+
+
+
+.list.list_link li {
+    padding: 0
+}
+
+
+
+
+
+
+
+
+
+
+.ttl_sub {
+    display: block;
+    padding-top: 15px;
+    font-size: 11px;
+    line-height: 2.09091;
+    color: #b3b3b3
+}
+
+.ttl_cap {
+    font-size: 11px;
+    line-height: 2.09091
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 .ttl_1 {
@@ -219,7 +387,6 @@ font-family: 'Shippori Mincho', sans-serif;
 }
 .newsEditor a {
 color: #003EA2;
-text-decoration: underline;
 }
 .newsEditor hr {
 display: block;
