--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -62,7 +62,7 @@
     </a>
   </li>
   <li class="c-bannerList_node">
-    <a href="/patterorder">
+    <a href="/patternorder">
       <div class="c-bannerList_img">
         <img src="/samale-min.webp" alt="パターンオーダーの画像">
       </div>
@@ -1309,13 +1309,34 @@ img{
 
 }
 
+.c-singlePager {
+          position: relative;
+          font-size: 20px;
+          font-family: 'Shippori Mincho', sans-serif;
+          margin: 50px 40px 80px;
+          padding: 0 0 10px;
+      }
+      
+      .c-singlePager_arrow-prev {
+          position: absolute;
+          top: 0;
+          left: 0;
+      }
+      
+      .c-singlePager_arrow-next {
+          position: absolute;
+          top: 0;
+          right: 0;
+      }
+
+
+
 
 nav {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1; /* z-indexで最前面に持ってくる */
-
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
 
@@ -1327,70 +1348,69 @@ nav {
 
 
   }
+ 
 
 
-  
-    nav .nav-content {
-      max-width: 1200px;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-            padding: 10px;
-    }
-  
-    nav .logo a {
-      font-weight: 500;
-      font-size: 1.05rem;
-      color:#3A3226;
-      
-      text-decoration: none;
+  nav .nav-content {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; 
+     }
 
-    }
-  
-    .nav-content .nav-links {
-      display: flex;
-    }
-  
-
+  nav .logo a {
+    font-weight: 500;
+    font-size: 1.05rem;
+    color:#3A3226;
     
-    .nav-content .nav-links li {
-      list-style: none;
-      margin: 0 8px;
-    }
+    text-decoration: none;
+
+  }
+
+  .nav-content .nav-links {
+    display: flex;
+    padding-right: 20px;
+  }
+
+
   
+  .nav-content .nav-links li {
+    list-style: none;
+    margin: 0 8px;
+  }
+
+  .nav-links li a {
+    text-decoration: none;
+    color:#3A3226;
+    font-size: 0.95rem;
+    font-weight: 500;
+    padding: 10px 4px;
+    transition: all 0.3s ease;
+    line-height: 2.6176470588;
+      letter-spacing: .084em;
+      gap:3.125rem;
+      font-family: "Shippori Mincho",sans-serif;
+
+  }
+
+  .nav-links li a:hover {
+    color: #0e2431;
+    border-bottom:1px solid black;
+  }
+
+
+  @media print, screen and (max-width: 767px) {
     .nav-links li a {
-      text-decoration: none;
-      color:#3A3226;
-      font-size: 0.95rem;
-      font-weight: 500;
-      padding: 10px 4px;
-      transition: all 0.3s ease;
-      line-height: 2.6176470588;
-        letter-spacing: .084em;
-        gap:3.125rem;
-        font-family: "Shippori Mincho",sans-serif;
-
+      width: 100%;
+      text-align: center;
+      font-size: 0.98rem;
+      padding: 0px 0px;
     }
-
-    .nav-links li a:hover {
-      color: #0e2431;
-      border-bottom:1px solid black;
+    nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
+      font-size: 0.98rem;
     }
-  
-  
-    @media print, screen and (max-width: 767px) {
-      .nav-links li a {
-        width: 100%;
-        text-align: center;
-        font-size: 0.98rem;
-        padding: 0px 0px;
-      }
-      nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-        font-size: 0.98rem;
-      }
-    }
-
+  }
 
 
      </style> 
