--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -42,7 +42,7 @@
               <p>&nbsp;</p>
 
               <p><img src="/samplekawa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc"><br class="sp">特徴的なスクラッチ模様はそのままに、ワックスによる滑らかな触り心地が特徴です。<br class="sp"><br class="pc"><br class="pc"><br class="sp"><span class="stripe-marker">※こちらの革は、外装のみ、または一部商品には適応外となります。</span>
+              <p>１つ目と同じ特徴に加え、表面のホワイトワックスが使い込むほどに革の内部に浸透していき、ワックス革特有のツヤを帯び、味わい深い色に変化していきます。<br class="sp"><br class="pc"><br class="sp">特徴的なスクラッチ模様はそのままに、ワックスによる滑らかな触り心地が特徴です。<br class="sp"><br class="pc"><br class="pc"><br class="sp"><span class="stripe-marker">※こちらの革は、外装のみ、また一部商品には適応外となります。</span>
               </p>
               
               <p>&nbsp;</p>
