--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -53,7 +53,7 @@
         </dl>
 
         <dl>
-          <dt>STEP - 6 ロゴ、刻印</dt>
+          <dt>STEP - 6 ロゴ・刻印</dt>
           <dd>	ロゴの有無、、刻印する文字をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※大小文字含め６文字まで</span></dd>
           </dl>
         <dl>
