--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -40,7 +40,7 @@
         </dl>
         <dl>
         <dt>STEP - 2 皮革</dt>
-        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【 スクラッチ 】&nbsp;８色<br class="pc"><br class="sp">【 ホワイトワックス 】&nbsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span></span>
+        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【 スクラッチ 】&nbsp;８色<br class="pc"><br class="sp">【 ホワイトワックス 】&nbsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
         </dd>
         </dl>
         <dl>
